# code-or-die

./: Pipfile  README.md  app.py  board.py  client_test.py  models.py  pyproject.toml  requirements.txt  server.py  stars.py
core/: app.py  board.py  models.py  server.py  stars.py
