[tool.poetry]
name = "code-or-die"
version = "0.0.1"
description = "Code or Die live coding competition"
authors = ["Tsvika S <tsvikas@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.6"
networkx = "^2.2"
matplotlib = "^3.0"
waitress = "^1.1"
requests = "^2.20"
mongoengine = "^0.16.2"
flask = "^1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
